--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <p class="joke" id="joke">Dad Joke</p>
             <button class="button" id="btn">Tell me a joke</button>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
